--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -7,6 +7,11 @@
     background-position: center;
 }
 
+.sub-menu li {
+    display: block;
+    font-size: 16px;
+}
+
 @media only screen and (max-width: 800px) {
     #showcase {
         margin-top: 0;
