--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -61,10 +61,7 @@
 }
 
 .blur {
-    transition: all .25s ease-in-out;
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
-    /*opacity: 0.5;*/
+
 }
 
 #img1 {
@@ -83,6 +80,10 @@
 
 .shadow {
     text-shadow: 3px 3px 2px rgba(0, 0, 0, 1);
+}
+
+.smooth_blur{
+    transition: all .25s ease-in-out;
 }
 
 #behance {
@@ -178,6 +179,15 @@
     width: 100%;
 }
 
+.zoom {
+    /*will only function if within allowed range of width*/
+}
+
+.removeFx {
+    /*remove any existing effects*/
+}
+
+
 @media only screen and (min-width: 1550px), (max-width: 1500px){
     #img1 a, #img4 a, #img2 a, #img3 a {
         visibility: hidden;
@@ -186,9 +196,12 @@
     #img1 img, #img4 img, #img2 img, #img3 img {
         cursor: pointer;
     }
-    .blur{
-        -webkit-filter: sepia(40%);
-        filter: sepia(40%);
+    .zoom{
+        /*-webkit-filter: sepia(40%);*/
+        /*filter: sepia(40%);*/
+        transition: all .25s ease-in-out;
+        transform: scale(1.1,1.1);
+
     }
 }
 
@@ -213,6 +226,12 @@
         position: absolute;
         left: 1100px;
         top: 980px;
+    }
+
+    .blur {
+        transition: all .25s ease-in-out;
+        -webkit-filter: blur(5px);
+        filter: blur(5px);
     }
 
 }
@@ -288,5 +307,10 @@
     #flickr_mobile, #behance_mobile{
         width: 100%;
         margin-left: 0;
+    }
+
+    .zoom{
+        /*disable the effect on smartphones */
+        transform: initial;
     }
 }
