Fixed Text Err in Resume x Clickable Logo to Return to Home Page

--- a/CSS/common_white.css
+++ b/CSS/common_white.css
@@ -161,6 +161,10 @@ body {
     cursor: pointer;
 }
 
+#mobile_logo img, #personal_logo img{
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 800px) {
     /*FOR THE MOBILE NAV BAR*/
     #nav {
