--- a/CSS/common.css
+++ b/CSS/common.css
@@ -154,6 +154,11 @@ body {
     filter: invert();
 }
 
+#mobile_logo img, #personal_logo img{
+    cursor: pointer;
+}
+
+
 @media only screen and (max-width: 800px) {
     /*FOR THE MOBILE NAV BAR*/
     #nav {
