--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -64,18 +64,13 @@
 
 }
 
-#img1 {
+.marg-bottom{
     margin-bottom: 8%;
 }
 
-#img2 {
-    margin-bottom: 8%;
-    /*margin: 0 2.87% 2.87% 0;*/
-}
-
-#img3 {
-    margin-bottom: 8%;
-    /*margin: 0 0 2.87% 0;*/
+.gfxCommon  {}
+.gfxCommon img {
+    width: 100%;
 }
 
 .shadow {
@@ -196,6 +191,14 @@
     #img1 img, #img4 img, #img2 img, #img3 img {
         cursor: pointer;
     }
+
+    .gfxCommon a{
+        visibility: hidden;
+        position: absolute;
+    }
+    .gfxCommon img {
+        cursor: pointer;
+    }
     .zoom{
         /*-webkit-filter: sepia(40%);*/
         /*filter: sepia(40%);*/
@@ -226,6 +229,18 @@
         position: absolute;
         left: 1100px;
         top: 980px;
+    }
+
+    #gotgAnchor{
+        position: absolute;
+        left: 1058px;
+        top: 1457px;
+    }
+
+    #tapeFaceAnchor{
+        position: absolute;
+        left: 650px;
+        top: 1506px;
     }
 
     .blur {
