--- a/Sass/litec_styles.css
+++ b/Sass/litec_styles.css
@@ -11,8 +11,10 @@ Credit to codepen.io -- Underline from the center
 
 #litec_bg {
   background-image: url("../Images/LITEC1x.jpg");
-  background-size: 100%;
-  padding: 15% 0 33% 0; }
+  background-size: 1520px 1000px;
+  padding: 15% 0 30% 0; }
+  #litec_bg #first_h2 {
+    margin-top: -12%; }
   #litec_bg #text_section {
     margin: 0 54% 0 14%; }
     #litec_bg #text_section h4 {
@@ -63,6 +65,114 @@ Credit to codepen.io -- Underline from the center
     text-align: center;
     font-family: Roboto;
     color: white;
-    font-size: 50px; }
+    font-size: 30px; }
+
+@media only screen and (max-width: 1400px) {
+  #litec_bg {
+    background-image: url("../Images/LITEC1x.jpg"); }
+    #litec_bg #text_section {
+      margin: 0 40% 0 14%; }
+    #litec_bg #first_h2 {
+      margin-top: -9%; } }
+@media only screen and (max-width: 1200px) {
+  #litec_bg {
+    background-size: 1200px 789px;
+    padding: 15% 0 25% 0; } }
+@media only screen and (max-width: 929px) {
+  #litec_bg {
+    background-size: 900px 592px; }
+    #litec_bg #text_section h4 {
+      font-size: 35px; }
+    #litec_bg #text_section h2 {
+      font-size: 25px; }
+    #litec_bg #text_section a {
+      font-size: 28px;
+      position: relative;
+      text-decoration: none;
+      display: inline-block; }
+      #litec_bg #text_section a:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 24px;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0);
+        transform: scaleX(0);
+        transition: all .3s ease-in-out; }
+      #litec_bg #text_section a:hover:after {
+        transform: scaleX(1);
+        background-color: white; } }
+@media only screen and (max-width: 655px) {
+  #litec_bg {
+    padding: 15% 0 68% 0;
+    background-image: url("../Images/litec-proj-pic.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center bottom; }
+    #litec_bg #text_section {
+      margin: -10% 25% 0 25%; }
+      #litec_bg #text_section h4 {
+        font-size: 35px; }
+      #litec_bg #text_section h2 {
+        text-align: center;
+        font-size: 25px; }
+      #litec_bg #text_section a {
+        font-size: 28px;
+        position: relative;
+        text-decoration: none;
+        display: inline-block; }
+        #litec_bg #text_section a:after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          top: 24px;
+          left: 0;
+          background-color: rgba(255, 255, 255, 0);
+          transform: scaleX(0);
+          transition: all .3s ease-in-out; }
+        #litec_bg #text_section a:hover:after {
+          transform: scaleX(1);
+          background-color: white; } }
+@media only screen and (max-width: 605px) {
+  #litec_bg {
+    text-align: center;
+    padding: 15% 0 68% 0; }
+    #litec_bg #text_section {
+      margin: -10% 15% 0 15%; }
+      #litec_bg #text_section h2 {
+        text-align: center; }
+      #litec_bg #text_section #litec_github {
+        display: block;
+        margin: -4% auto 0 auto; }
+        #litec_bg #text_section #litec_github img {
+          height: 24px;
+          width: 24px; } }
+@media only screen and (max-width: 433px) {
+  #litec_bg #text_section {
+    margin: -10% 10% 0 10%; }
+    #litec_bg #text_section h4 {
+      font-size: 30px; }
+    #litec_bg #text_section h2 {
+      font-size: 21px; }
+    #litec_bg #text_section a {
+      font-size: 22px;
+      position: relative;
+      text-decoration: none;
+      display: inline-block; }
+      #litec_bg #text_section a:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 24px;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0);
+        transform: scaleX(0);
+        transition: all .3s ease-in-out; }
+      #litec_bg #text_section a:hover:after {
+        transform: scaleX(1);
+        background-color: white; } }
 
 /*# sourceMappingURL=litec_styles.css.map */
