--- a/Sass/litec_styles.css
+++ b/Sass/litec_styles.css
@@ -1,6 +1,11 @@
 /*
 Credit to codepen.io -- Underline from the center
  */
+.h2styles h2 {
+  margin-top: -1%;
+  font-family: SFLight, serif;
+  font-size: 35px; }
+
 .rotate360 {
   -ms-transform: rotate(360deg);
   /* IE 9 */
@@ -69,10 +74,21 @@ Credit to codepen.io -- Underline from the center
     #smart_car_intro #sc_text h1 {
       font-family: RobotoReg, serif;
       font-size: 50px; }
-    #smart_car_intro #sc_text h2 {
-      margin-top: -1%;
-      font-family: SFLight, serif;
-      font-size: 35px; }
+
+#flickr_album {
+  padding-top: 2%;
+  padding-bottom: 5%;
+  background-color: rgba(194, 193, 180, 0.2); }
+  #flickr_album h1 {
+    font-family: RobotoReg, serif;
+    font-size: 50px; }
+  #flickr_album h2 {
+    margin-top: -3%; }
+  #flickr_album #album_container a img {
+    width: 60%;
+    height: 40%;
+    margin: 0 auto;
+    display: block; }
 
 #content1 {
   padding: 5% 0;
@@ -129,6 +145,9 @@ Credit to codepen.io -- Underline from the center
         transform: scaleX(1);
         background-color: white; }
 
+  .h2styles h2 {
+    font-size: 25px; }
+
   #smart_car_intro {
     background-color: #e0d9d2;
     background-repeat: no-repeat;
@@ -136,8 +155,12 @@ Credit to codepen.io -- Underline from the center
     background-size: 110%; }
     #smart_car_intro #sc_text h1 {
       font-size: 35px; }
-    #smart_car_intro #sc_text h2 {
-      font-size: 25px; } }
+
+  #flickr_album h1 {
+    font-size: 35px; }
+  #flickr_album #album_container a img {
+    width: 100%;
+    height: 66.7%; } }
 @media only screen and (max-width: 655px) {
   #litec_bg {
     padding: 15% 0 68% 0;
@@ -217,7 +240,11 @@ Credit to codepen.io -- Underline from the center
 
   #smart_car_intro #sc_text h1 {
     font-size: 30px; }
-  #smart_car_intro #sc_text h2 {
-    font-size: 21px; } }
+
+  .h2styles h2 {
+    font-size: 21px; }
+
+  #flickr_album h1 {
+    font-size: 35px; } }
 
 /*# sourceMappingURL=litec_styles.css.map */
