--- a/Sass/litec_styles.scss
+++ b/Sass/litec_styles.scss
@@ -34,6 +34,10 @@ Credit to codepen.io -- Underline from the center
   }
 }
 
+h1{
+  font-size: 50px;
+}
+
 .rotate360{
   -ms-transform: rotate(360deg); /* IE 9 */
   -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
@@ -47,14 +51,13 @@ Credit to codepen.io -- Underline from the center
   padding: 15% 0 30% 0;
 
   #first_h2{
-    margin-top: -12%;
+    margin-top: -4%;
   }
 
   #text_section{
     margin: 0 54% 0 14%;
-    h4{
+    h1{
       font-family: RobotoReg;
-      font-size: 50px;
       color: white;
     }
     h2{
@@ -95,7 +98,6 @@ Credit to codepen.io -- Underline from the center
     text-align: center;
     h1{
       font-family: RobotoReg, serif;
-      font-size: 50px;
     }
   }
 }
@@ -106,7 +108,6 @@ Credit to codepen.io -- Underline from the center
   background-color: rgba(194,193,180,0.2);
   h1{
     font-family: RobotoReg, serif;
-    font-size: 50px;
   }
 
   #album_container a img{
@@ -118,27 +119,58 @@ Credit to codepen.io -- Underline from the center
 }
 
 .features_container{
-  padding: 1% 9%;
+  padding: 1% 9% 50% 9%;
   background-color: #e0d9d2;
   h3{
     font-family: RobotoReg;
-    font-size: 40px;
   }
   p{
-    font-family: Bell MT;
+    font-family: Helvetica;
     font-size: 23px;
   }
 }
 
+h3{
+  font-size: 40px;
+}
+
+@mixin feature-styles($color : white, $spc : 0){
+  background-size: 100%;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  @if ($color == white){
+    color: white;
+  } @else if($color == black){
+    color: black;
+  }
+  @if($spc > 0){
+    margin-top: 13%;
+    @media only screen and (max-width: 800px){
+      margin-top: 4%;
+    }
+  }
+}
+
 #features{
-  background-color: floralwhite;
+  background-color: rgba(255,250,240,0.7);
+  a{
+    &:visited{
+      color: white;
+      text-decoration: underline;
+    }
+    &:link{
+      color: white;
+    }
+    &:hover{
+      color: orange;
+    }
+  }
   h1{
     font-family: RobotoReg, serif;
-    font-size: 50px;
   }
   #ft-titles{
     text-align: center;
-    padding: 3% 0;
+    padding: 3% 8%;
   }
   #ft-wrapper{
     display: flex;
@@ -146,12 +178,29 @@ Credit to codepen.io -- Underline from the center
       width: 50%;
       padding: 0 2.5% 5% 5%;
       div:nth-child(1){
-        color: white;
+        background-image: url("../Images/litec/c.png");
+        background-color: black;
+        @include feature-styles(white,0);
+      }
+      div:nth-child(2){
+        background-color: rgba(215,206,191,1);
+        background-image: url("../Images/litec/protoboard.jpg");
+        @include feature-styles(black,1);
       }
     }
     #ft-col2{
       width: 50%;
       padding: 0 5% 5% 2.5%;
+      div:nth-child(1){
+        background-color: black;
+        background-image: url("../Images/litec/git.png");
+        @include feature-styles(white,0);
+      }
+      div:nth-child(2){
+        background-color: rgba(252,242,217,1);
+        background-image: url("../Images/litec/c8051.jpg");
+        @include feature-styles(black,1);
+      }
     }
   }
 }
@@ -183,8 +232,11 @@ Credit to codepen.io -- Underline from the center
       margin: 0 40% 0 14%;
     }
     #first_h2{
-      margin-top: -9%;
+      margin-top: -3%;
     }
+  }
+  h3{
+    font-size: 35px;
   }
 }
 
@@ -196,15 +248,18 @@ Credit to codepen.io -- Underline from the center
   #smart_car_intro{
     background-size: 1200px 789px;
   }
+  h3{
+    font-size: 32px;
+  }
 }
 
 @media only screen and (max-width: 929px){
+  h1{
+    font-size: 35px;
+  }
   #litec_bg{
     background-size: 900px 592px;
     #text_section{
-      h4{
-        font-size: 35px;
-      }
       h2{
         font-size: 25px;
       }
@@ -224,11 +279,6 @@ Credit to codepen.io -- Underline from the center
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: 110%;
-    #sc_text{
-      h1{
-        font-size: 35px;
-      }
-    }
   }
   #flickr_album{
     h1{
@@ -237,6 +287,23 @@ Credit to codepen.io -- Underline from the center
     #album_container a img{
       width: 100%;
       height: 66.7%;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px){
+  #features{
+    #ft-wrapper{
+      display: block;
+
+      #ft-col1{
+        padding: 2% 0 2% 0;
+        width: 100%;
+      }
+      #ft-col2{
+        padding: 2% 0 2% 0;
+        width: 100%;
+      }
     }
   }
 }
@@ -251,9 +318,6 @@ Credit to codepen.io -- Underline from the center
     background-position: center bottom;
     #text_section {
       margin: -10% 25% 0 25%;
-      h4 {
-        font-size: 35px;
-      }
       h2 {
         text-align: center;
         font-size: 25px;
@@ -293,12 +357,12 @@ Credit to codepen.io -- Underline from the center
 }
 
 @media only screen and (max-width: 433px){
+  h1{
+    font-size: 30px;
+  }
   #litec_bg{
     #text_section{
       margin: -10% 10% 0 10%;
-      h4{
-        font-size: 30px;
-      }
       h2{
         font-size: 21px;
       }
@@ -308,21 +372,9 @@ Credit to codepen.io -- Underline from the center
       }
     }
   }
-  #smart_car_intro{
-    #sc_text{
-      h1{
-        font-size: 30px;
-      }
-    }
-  }
   .h2styles{
     h2 {
       font-size: 21px;
-    }
-  }
-  #flickr_album{
-    h1{
-      font-size: 35px;
     }
   }
 }
