--- a/Sass/litec_styles.css
+++ b/Sass/litec_styles.css
@@ -137,6 +137,17 @@ h3 {
         @media only screen and (max-width: 800px) {
           #features #ft-wrapper #ft-col1 div:nth-child(2) {
             margin-top: 4%; } }
+      #features #ft-wrapper #ft-col1 div:nth-child(3) {
+        background-color: #ece4d1;
+        background-image: url("../Images/litec/adc.jpg");
+        background-size: 100%;
+        background-position: center bottom;
+        background-repeat: no-repeat;
+        color: black;
+        margin-top: 13%; }
+        @media only screen and (max-width: 800px) {
+          #features #ft-wrapper #ft-col1 div:nth-child(3) {
+            margin-top: 4%; } }
     #features #ft-wrapper #ft-col2 {
       width: 50%;
       padding: 0 5% 5% 2.5%; }
@@ -157,6 +168,17 @@ h3 {
         margin-top: 13%; }
         @media only screen and (max-width: 800px) {
           #features #ft-wrapper #ft-col2 div:nth-child(2) {
+            margin-top: 4%; } }
+      #features #ft-wrapper #ft-col2 div:nth-child(3) {
+        background-color: #cfc3b4;
+        background-image: url("../Images/litec/I2C.jpg");
+        background-size: 100%;
+        background-position: center bottom;
+        background-repeat: no-repeat;
+        color: black;
+        margin-top: 13%; }
+        @media only screen and (max-width: 800px) {
+          #features #ft-wrapper #ft-col2 div:nth-child(3) {
             margin-top: 4%; } }
 
 #content1 {
