--- a/Sass/litec_styles.scss
+++ b/Sass/litec_styles.scss
@@ -35,6 +35,7 @@ Credit to codepen.io -- Underline from the center
 }
 
 h1{
+  font-family: RobotoReg;
   font-size: 50px;
 }
 
@@ -71,7 +72,6 @@ h1{
       margin-left: 1%; // use to be 19%
       display: flex;
       margin-top: -2%;
-      vertical-align: middle;
       transition: all .5s ease-in-out;
       a{
         margin-left: 2%;
@@ -122,10 +122,10 @@ h1{
   padding: 1% 9% 50% 9%;
   background-color: #e0d9d2;
   h3{
-    font-family: RobotoReg;
+    font-family: RobotoReg,serif;
   }
   p{
-    font-family: Helvetica;
+    font-family: Helvetica,serif;
     font-size: 23px;
   }
 }
@@ -134,10 +134,14 @@ h3{
   font-size: 40px;
 }
 
-@mixin feature-styles($color : white, $spc : 0){
+@mixin background-prop{
   background-size: 100%;
   background-position: center bottom;
   background-repeat: no-repeat;
+}
+
+@mixin feature-styles($color : white, $spc : 0){
+  @include background-prop;
   @if ($color == white){
     color: white;
   } @else if($color == black){
@@ -192,6 +196,11 @@ h3{
         background-image: url("../Images/litec/adc.jpg");
         @include feature-styles(black,1);
       }
+      div:nth-child(4){
+        background-color: black;
+        @include feature-styles(white,1);
+        padding: 1% 9% 2% 9%;
+      }
     }
     #ft-col2{
       width: 50%;
@@ -211,8 +220,32 @@ h3{
         background-image: url("../Images/litec/I2C.jpg");
         @include feature-styles(black,1);
       }
+      div:nth-child(4){
+        background-color: black;
+        @include feature-styles(white,1);
+        padding: 1% 9% 2% 9%;
+      }
     }
   }
+}
+
+#yt{
+  background-color: rgba(252,242,217,1);
+  padding: 3% 0;
+  text-align: center;
+}
+
+#litec-intro{
+  background-image: url("../Images/litec/introbg.jpg");
+  padding: 3% 12% 25% 12%;
+  @include background-prop;
+  background-color: rgba(245,238,230,1);
+
+}
+
+h4{
+  font-family: SFLight,serif;
+  font-size: 25px;
 }
 
 #content1{
@@ -284,6 +317,9 @@ h3{
       font-size: 25px;
     }
   }
+  #litec-intro{
+    padding: 3% 7.5% 25% 7.5%;
+  }
   #smart_car_intro{
     background-color: #e0d9d2;
     background-repeat: no-repeat;
@@ -316,6 +352,9 @@ h3{
       }
     }
   }
+  h4{
+    font-size: 20px;
+  }
 }
 
 @media only screen and (max-width: 655px){
@@ -341,6 +380,9 @@ h3{
 }
 
 @media only screen and (max-width: 605px){
+  #yt iframe{
+    width: 100%;
+  }
   #litec_bg{
     text-align: center;
     padding: 15% 0 68% 0;
@@ -386,5 +428,8 @@ h3{
     h2 {
       font-size: 21px;
     }
+  }
+  h4{
+    font-size: 17px;
   }
 }
